refactor SIS | [FE] refactor login feature (w9)
Change reactTS to reactJS and all dependencies with it; update code in spring-boot-app; refactor login feaure in react app...